Some more cleanups

--- a/website/content/index.html
+++ b/website/content/index.html
@@ -6,7 +6,7 @@ description: |
   Hagen is a static website generator, written in Rust.
 ---
 
-<div class="jumbotron">
+<div class="jumbotron offset-md-1 col-md-10 offset-lg-2 col-lg-8">
 
 <h2 class="display-4">Welcome to Hagen</h2>
 
@@ -20,10 +20,3 @@ It's goal is to be flexible and extensible, making it possible to generate all k
 </p>
 
 </div>
-
-<p>
-  This page is generated with Hagen, and you can see the full setup in
-  the <a href="https://github.com/ctron/hagen/tree/master/website">website/</a>
-  directory of its <a href="https://github.com/ctron/hagen">GitHub repository</a>.
-  </p>
-  
