--- a/website/content/documentation/index.html
+++ b/website/content/documentation/index.html
@@ -3,4 +3,15 @@ title: Documentation
 layout: documentation
 ---
 
-{{> doc/index idx=full.content.documentation }}
+<p>
+Learn how to work with Hagen.
+</p>
+
+{{#>note type="secondary"}}
+  This page is generated with Hagen, and you can see the full setup in
+  the <a class="alert-link" href="https://github.com/ctron/hagen/tree/master/website">website/</a>
+  directory of its <a class="alert-link" href="https://github.com/ctron/hagen">GitHub repository</a>.
+{{/note}}
+
+
+
